<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="12dp"
    android:background="@drawable/table_header_border">

    <TextView
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:text="@string/label_no"
        android:textSize="14sp"
        android:textStyle="bold"
        android:textColor="#FFFFFF"
        android:gravity="center" />

    <TextView
        android:layout_width="0dp"
        android:layout_weight="1.5"
        android:layout_height="wrap_content"
        android:text="@string/label_nopol"
        android:textSize="14sp"
        android:textStyle="bold"
        android:textColor="#FFFFFF"
        android:paddingStart="8dp"
        android:paddingEnd="8dp" />

    <TextView
        android:layout_width="0dp"
        android:layout_weight="2"
        android:layout_height="wrap_content"
        android:text="@string/label_rute"
        android:textSize="14sp"
        android:textStyle="bold"
        android:textColor="#FFFFFF"
        android:paddingStart="8dp"
        android:paddingEnd="8dp" />

    <TextView
        android:layout_width="0dp"
        android:layout_weight="1.5"
        android:layout_height="wrap_content"
        android:text="@string/label_tanggal"
        android:textSize="14sp"
        android:textStyle="bold"
        android:textColor="#FFFFFF" />

    <TextView
        android:layout_width="0dp"
        android:layout_weight="1.5"
        android:layout_height="wrap_content"
        android:text="@string/label_sopir"
        android:textSize="14sp"
        android:textStyle="bold"
        android:textColor="#FFFFFF" />

    <TextView
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:text="@string/label_sisa"
        android:textSize="14sp"
        android:textStyle="bold"
        android:textColor="#FFFFFF"
        android:gravity="center" />

</LinearLayout>
